# gremlin

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
.gremlin/: config.json
scripts/: ci_state.py
src/: bug_generation.py  bug_generation_test.py  gremlin.py  gremlin_cmd.py  gremlin_core.py  gremlin_eval.py  gremlin_eval_cases.py  gremlin_eval_checkout.py  gremlin_eval_cli.py  gremlin_eval_logging.py  gremlin_eval_test.py  gremlin_scan.py  gremlin_scan_test.py  gremlin_test.py  plot_token_report.py  repo_root.py  repo_root_test.py
src/agents/: agent.py  claude_runner.py  claude_test.py  opencode_runner.py
src/claude/: claude_runner.py  mock_claude.py
test/: e2e.py
