[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gremlin"
version = "0.1.0"
description = "TODO."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Marko Rosenmüller" }]
keywords = []
dependencies = [
  "matplotlib>=3.8",
  "tiktoken>=0.7",
]

[project.scripts]
gremlin-scan = "gremlin_scan:main"
gremlin = "gremlin:main"
gremlin-eval = "gremlin_eval:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["gremlin_scan", "gremlin", "gremlin_cmd", "gremlin_eval", "plot_token_report", "repo_root", "bug_generation"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["claude*"]

[project.optional-dependencies]
dev = [
  "prompt-toolkit>=3.0",
  "pytest>=8.2",
]

[tool.pytest.ini_options]
testpaths = ["test", "src"]
python_files = ["test_*.py", "*_test.py", "e2e.py"]
